[package]
name = "synattra"
version = "0.2.0"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["parsing", "macro", "attribute"]
repository = "https://github.com/magnet/synattra"
description = """
A Syn Attribute Parser Toolkit
"""
categories = ["parsing"]
edition = "2018"

[dependencies]
syn = {version= "1.0", features = ["full"] }
proc-macro2 = "1.0"
auto_enums = "0.5"